--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
 }
