--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "express-validator": "^7.0.1",
     "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "validator": "^13.11.0",
+    "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "graphql-playground-middleware-express": "^1.7.23"
   }
 }
