--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "express-validator": "^7.0.1",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "socket.io": "^4.7.4",
     "validator": "^13.11.0",
     "yup": "^1.3.3"
